public/styles/layout.css
body {
  margin: 0;
}

footer {
  position: absolute;
  height: 50px;
  background-color: #d9d9d9;
  bottom: 0;
  width: 100%;
}

footer > p {
  font: 16px "Trebuchet MS", sans-serif;
  text-align: center;
}

h1 {
  margin: 8.4px 0;
  margin-left: 20px;
  display: inline-block;
  font: 36px Impact, fantasy;
}

#navbar {
  height: 60px;
  background-color: #d9d9d9;
}

#navbar-options {
  padding: 18.4px 0;
  float: right;
  font: 20px "Trebuchet MS", sans-serif;
  margin-right: 20px;
}

#navbar-options a {
  margin-left: 40px;
  color: #000;
  text-decoration: none;
  white-space: nowrap;
}

@media only screen and (max-width: 522px) {
  #navbar {
    text-align: center;
    height: 120px;
  }
  #navbar-options {
    display: block;
    float: none;
  }
}

@media only screen and (max-width: 400px) {
  #navbar {
    height: 140px;
  }
}

@media only screen and (max-width: 268px) {
  #navbar {
    height: 160px;
  }
}

